# workflow

./: .gitignore  README.md  accurate_rag.py  create_embeddings.py  docker-compose.yml  main.py  memory_agent.py  ollama_embed.py  ollama_pdf.py  ollama_retrieve.py  openrouter_openai.py  pg_embed.py  pg_pdf.py  pg_retrieve.py  pg_vector.py  pyproject.toml  retrieve_embeddings.py  test.py
chroma_langchain_db/: chroma.sqlite3
db-web-view/: README.md  drizzle.config.ts  package.json
db-web-view/drizzle/: 0000_clever_rattler.sql
db-web-view/drizzle/meta/: 0000_snapshot.json  _journal.json
db-web-view/schema/: relations.ts  schema.ts
mem0-ts/: README.md  index.ts  package.json
src/: gemini-agent.py  gemini-memory.py  memory-ai.py
