[project]
name = "learn-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langchainhub>=0.1.21",
    "openai>=2.15.0",
    "packaging>=24.2",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "regex>=2026.1.15",
    "tiktoken>=0.12.0",
    "types-requests>=2.32.4.20260107",
]
